@@ -280,6 +280,7 @@ struct heaps_slot {
     void *membase;
     RVALUE *slot;
     size_t limit;
+    int finalize_flag;
 };
 
 #define HEAP_MIN_SLOTS 10000
@@ -938,6 +939,7 @@ assign_heap_slot(rb_objspace_t *objspace)
     heaps[hi].membase = membase;
     heaps[hi].slot = p;
     heaps[hi].limit = objs;
+    heaps[hi].finalize_flag = FALSE;
     pend = p + objs;
     if (lomem == 0 || lomem > p) lomem = p;
     if (himem < pend) himem = pend;
@@ -1874,6 +1876,8 @@ gc_sweep(rb_objspace_t *objspace)
 	RVALUE *final = final_list;
 	int deferred;
 
+	if(heaps[i].finalize_flag) continue;
+
 	p = heaps[i].slot; pend = p + heaps[i].limit;
 	while (p < pend) {
 	    if (!(p->as.basic.flags & FL_MARK)) {
@@ -1912,7 +1916,7 @@ gc_sweep(rb_objspace_t *objspace)
 		pp->as.free.flags |= FL_SINGLETON; /* freeing page mark */
 	    }
 	    heaps[i].limit = final_num;
-
+	    heaps[i].finalize_flag = TRUE;
 	    freelist = free;	/* cancel this page from freelist */
 	}
 	else {
